Fixed responsive nav bar added overflow-x and fixed width for carousel of skills section

--- a/Styles/Main.scss
+++ b/Styles/Main.scss
@@ -67,17 +67,18 @@ header {
         }
       }
     }
-    .Reponsive-nav {
+    .Responsive-nav {
       display: none;
       flex-direction: column;
       width: 100vw;
-      height: 84vh;
+      height: 0;
       background-color: $background-color;
-      z-index: 10;
       position: absolute;
-      bottom: 0;
+      top: 74px;
       left: 0;
       justify-items: center;
+      overflow-y: hidden;
+      transition: all $transition-duration $transition-ease;
       div {
         display: flex;
         flex-direction: column;
@@ -98,10 +99,11 @@ header {
       }
     }
     .responsive-bars {
+      display: none;
       margin: 0;
       svg {
         transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
-        path{
+        path {
           stroke: black;
         }
       }
@@ -271,13 +273,14 @@ main {
     align-items: center;
     position: relative;
     background: radial-gradient(circle at 50% 50%, #fdfdfd, #f0f0f0);
+    overflow-x: hidden;
     h2 {
       font-size: 2rem;
       margin: 10px 0;
     }
     .carousel-container {
       height: 65%;
-      width: 20%;
+      width: 290px;
       .showcase-skills {
         display: flex;
         justify-content: center;
@@ -633,11 +636,21 @@ footer {
 // Mobile breakpoint
 @media screen and (min-width: 330px) and (max-width: 745px) {
   header {
+    padding: 10px;
+    position: sticky;
+    top: 0;
+    z-index: 11;
     .nav-links {
       display: none !important;
     }
-    .Reponsive-nav{
-      display: flex;
+    .brand {
+      font-size: 66%;
+    }
+    .Responsive-nav {
+      display: flex !important;
+    }
+    .responsive-bars {
+      display: block !important;
     }
   }
   #introduction {
@@ -665,9 +678,8 @@ footer {
     }
   }
   #skills {
-    overflow-x: hidden;
     .carousel-container {
-      width: 65vw !important;
+      width: 250px !important;
     }
   }
   #projects {
@@ -691,7 +703,7 @@ footer {
   #experience {
     height: auto !important;
     .Experiance-lists {
-      padding: 0 20px !important;
+      padding: 20px !important;
       .Exp-item {
         img {
           margin: auto;
